--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 node_modules
 Build
 DatabasesConverter
-parser-win.exe
-parser-macos
-parser-linux
+ets2tools-win.exe
+ets2tools-macos
+ets2tools-linux
